# top10-news-crawler

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-ai-top10.yml  daily.yml
docs/: index.html
outputs/: top10.json  top10.md
scripts/: generate_site.py  update_readme.py
src/top10_news_crawler/: main.py  pyproject.toml
src/top10_news_crawler/config/: fallback_top10.json  sources.yaml
src/top10_news_crawler/pipeline/: dedup.py  export.py  fetch.py  filter.py  parse.py  rank.py  translate.py
src/top10_news_crawler/utils/: http.py  text.py
